--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -20,7 +20,9 @@ body {
 	position: relative;
 	background: none;
 }
-
+.jumbotron p.active {
+     color: #1f6ddd;
+}
 .jumbotron:after {
      content:"";
      background: url("../images/lorempixel.jumbotron.jpeg");
